--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>Hello everyone, I'm Muhammad Aldi Septian. Currently I am still studying S-1 Informatics Engineering at Pamulang University.</p>
-            <p>I am a diligent and motivated individual with a strong educational background and a deep understanding of Islamic principles. As a graduate of a renowned Islamic boarding school, I have honed my skills in religious studies, Arabic language, and the teachings of the Quran. I possess excellent moral character and uphold high ethical standards. With a passion for leadership, I am able to inspire and guide others effectively.</a></p>
+            <p>Hello everyone, I am Muhammad Aldi Septian. Bachelor of Computer Science, Pamulang University.</p>
+            <p>I am a recent graduate with a Bachelor's degree in Computer Science, with a basic understanding of programming, systems management and information technology. Ready to learn and contribute to the world of work with the skills you have.</a></p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
@@ -78,7 +78,7 @@
             <div class="h4 mt-0 title">Basic Information</div>
             <div class="row">
               <div class="col-sm-4"><strong class="text-uppercase">Umur :</strong></div>
-              <div class="col-sm-8">20</div>
+              <div class="col-sm-8">21</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
@@ -372,6 +372,23 @@
             <div class="h5">MA Daarul Muttaqin</div>
             <p class="category">MA Daarul Muttaqin school</p>
             <p>Lulusan Madrasah Aliyah (MA), di MA Daarul Muttaqin</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-education-header">
+            <p>2020 - 2024</p>
+            <div class="h6">Universitas Pamulang</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Universitas Pamulang</div>
+            <p class="category">Teknik Informatika</p>
+            <p>Sarjana S1 Ilmu Komputer, di Universitas Pamulang </p>
           </div>
         </div>
       </div>
